--- a/src/sass/components/_header.sass
+++ b/src/sass/components/_header.sass
@@ -64,7 +64,7 @@
         transform: scaleX(1)
         transform-origin: 0 0
     span
-      font-size: 12px
+      font-size: 13px
       line-height: 1.2
       display: inline-block
       position: relative
